<resources>
    <string name="app_name">TBC_Design_davaleba4</string>
    <string name="hello">Hello!</string>
    <string name="lets_introduce">lets introduce</string>
    <string name="unclickable_button_for_ui">Unclickable button for ui</string>
    <string name="your_full_name">Your full name</string>
    <string name="username">Username</string>
    <string name="next">Next  </string>
    <string name="back_button">Back Button</string>
</resources>