<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue_grey"
    android:paddingStart="26dp"
    android:paddingEnd="0dp"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnNotSure"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:background="@drawable/rounded_teal_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.16" />

    <TextView
        android:id="@+id/tvHello"
        android:layout_width="210dp"
        android:layout_height="55dp"
        android:layout_marginTop="34dp"
        android:gravity="center_vertical"
        android:text="@string/hello"
        android:textColor="@color/white"
        android:textSize="42sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnNotSure" />

    <TextView
        android:id="@+id/tvIntroduce"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:text="@string/lets_introduce"
        android:textColor="@color/light_grey"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvHello" />


    <LinearLayout
        android:id="@+id/linearLayoutFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvIntroduce">

        <ImageButton
            android:id="@+id/btnPersonIconName"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_person_button"
            android:contentDescription="@string/unclickable_button_for_ui"
            android:src="@drawable/icon_person" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="20dp"
            android:autofillHints="name"
            android:backgroundTint="@color/dark_blue_grey"
            android:hint="@string/your_full_name"
            android:inputType="text"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:textColor="@color/white"
            android:textColorHint="@color/light_grey"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutFullName">

        <ImageButton
            android:id="@+id/btnPersonIconUsername"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_person_button"
            android:contentDescription="@string/unclickable_button_for_ui"
            android:src="@drawable/icon_person" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="20dp"
            android:autofillHints="username"
            android:backgroundTint="@color/dark_blue_grey"
            android:hint="@string/username"
            android:inputType="text"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:textColor="@color/white"
            android:textColorHint="@color/light_grey"
            android:textSize="18sp" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/rounded_back_button"
        android:contentDescription="@string/back_button"
        android:src="@drawable/icon_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutUsername" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/rounded_teal_button"
        android:drawableEnd="@drawable/icon_arrow_forward"
        android:gravity="center_vertical|end"
        android:paddingStart="0dp"
        android:paddingEnd="98dp"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnBack"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutUsername" />


</androidx.constraintlayout.widget.ConstraintLayout>